Works with a span!
Signed-off-by: Ryan McQuen <rpcm@linux.com>

--- a/styles/wiki_link.less
+++ b/styles/wiki_link.less
@@ -1,4 +1,5 @@
 .wiki_link {
     cursor: pointer;
-    text-decoration: underline !important;
+    display: inline;
+    text-decoration: underline;
 }
