--- a/styles/wiki_link.less
+++ b/styles/wiki_link.less
@@ -3,35 +3,26 @@
     text-decoration: underline;
 }
 
-body, html {
-    padding: 15px;
-}
-
-#editor {
-    border: 1px solid #DDD;
-}
-
-
 .textcomplete-dropdown {
-  border: 1px solid #ddd;
-  //so it's easier to see for now
-  background-color: black;
-  list-style: none;
-  padding: 0;
-  margin: 0;
+    border: 1px solid #ddd;
+    //so it's easier to see for now
+    background-color: rgba(0, 0, 0, 0.1);
+    list-style: none;
+    padding: 1px;
+    margin: 0;
 }
 .textcomplete-dropdown li {
-  margin: 0;
+    margin: 0;
 }
 .textcomplete-footer,
 .textcomplete-item {
-  border-top: 1px solid #ddd;
+    border-top: 1px solid #ddd;
 }
 .textcomplete-item {
-  padding: 2px 5px;
-  cursor: pointer;
+    padding: 2px 5px;
+    cursor: pointer;
 }
 .textcomplete-item:hover,
 .textcomplete-item.active {
-  background-color: rgb(110, 183, 219);
+    background-color: rgb(110, 183, 219);
 }
